clusters/hetzner-dr/apps/permesso-admin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: permesso-admin
  namespace: permesso-admin
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway-infra
      sectionName: http

  hostnames:
    - admin.cloudnova.tech

  rules:
    - backendRefs:
        - name: adminer
          port: 80
